--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>https://vietnamvd.github.io/sad</title>
     <!-- Open Graph tags for social media sharing -->
-    <meta property="og:title" content="vietnamvd, australiavd">
-    <meta property="og:description" content="vietnamvd, australiavd">
+    <meta property="og:title" content="https://vietnamvd.github.io/sad">
+    <meta property="og:description" content="https://vietnamvd.github.io/sad">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://australiavd.github.io/">
-    <link rel="canonical" href="https://australiavd.github.io/">
+    <meta property="og:url" content="https://vietnamvd.github.io/sad">
+    <link rel="canonical" href="https://vietnamvd.github.io/sad">
 
     <!-- Page description (meta description) -->
-    <meta name="description" content=" https://australiavd.github.io/sad , a website sharing information and resources related to both domains">
+    <meta name="description" content="https://vietnamvd.github.io/sad">
 
     <!-- Keywords (meta keywords) -->
-    <meta name="keywords" content=" YOU WILL LIKE IT, https://australiavd.github.io/sad , https://australiavd.github.io">
+    <meta name="keywords" content="https://vietnamvd.github.io/sad">
 
     <!-- Robots tag to allow search engines to index this page -->
     <meta name="robots" content="index, follow">
@@ -22,26 +23,27 @@
     {
         "@context": "http://schema.org",
         "@type": "WebSite",
-        "url": "https://vietnamvd.github.io/",
-        "name": "vietnamvd, australiavd",
-        "description": "Official website for https://australiavd.github.io/sad, sharing resources and information related to the projects."
+        "url": "https://vietnamvd.github.io/sad",
+        "name": "https://vietnamvd.github.io/sad",
+        "description": "https://vietnamvd.github.io/sad"
     }
     </script>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YOU WILL LIKE IT</title>
+    <title>https://vietnamvd.github.io/sad</title>
 
     <!-- Redirect script -->
     <script>
         setTimeout(function() {
-            window.location.href = "https://ibvoiminh.blogspot.com/";
+            window.location.href = "https://australiavd.github.io/sad";
         }, 1000); // 1 second delay
     </script>
 </head>
 <body>
-    <p>YOU WILL LIKE IT</p>
-    <h1>YOU WILL LIKE IT</h1>
-    <p>!</p>
+    <p>https://vietnamvd.github.io/sad</p>
+    <h1>https://vietnamvd.github.io/sad</h1>
+<h2>https://vietnamvd.github.io/sad</h2>
+    <h3>https://vietnamvd.github.io/sad</h3>
 </body>
 </html>
