--- a/sad.html
+++ b/sad.html
@@ -44,7 +44,7 @@
   <meta name="robots" content="index, follow">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YOU WILL LIKE IT </title>
+    <title>https://vietnamvd.github.io/sad</title>
     <meta name="description" content="ghost scare troll games, ghost scare video clips, and many interesting things about the world of ghost scares!">
     <meta name="keywords" content="ghost scare, ghost scare game, ghost scare meme, ghost scare video, ghost scare clip, ghost scare troll, ghost scare website, ghost scare link, ghost scare game">
     <meta name="author" content="Ghost Scare Team">
