--- a/sad.html
+++ b/sad.html
@@ -293,8 +293,8 @@
                     <a href="https://ibvoiminh.blogspot.com/"> SEE MORE</a>
                 </div>
     
-                <p style="color:red">Share this website with your friends : https://australiavd.github.io/sad </p>
-                <p style="color:red">Share this website with your friends  <a href="https://australiavd.github.io/sad" style="color:red;">https://vietnamvd.github.io/sad</a></p>
+                <p style="color:red">Share this website with your friends : https://vietnamvd.github.io/sad </p>
+                <p style="color:red">Share this website with your friends  <a href="https://vietnamvds.github.io/sad" style="color:red;">https://vietnamvd.github.io/sad</a></p>
            <h1>https://vietnamvd.github.io/sad</h1>
             
         </div>
@@ -364,8 +364,7 @@
     <!-- Tab 2: Vietnam-specific content -->
     <div id="tab2" class="tab">
            <h1>https://vietnamvd.github.io/sad</h1>
-        <h1>Xin lỗi VN</h1>
-        <p>Nội dung này không khả dụng tại Việt Nam.</p>
+        <p>ẤN ZO XEM CHI TIẾT ĐI.</p>
         <a href="https://ibvoiminh.blogspot.com/">Xem chi tiết </a> 
     </div>
 </body>
