--- a/sad.html
+++ b/sad.html
@@ -367,5 +367,57 @@
         <p>ẤN ZO XEM CHI TIẾT ĐI.</p>
         <a href="https://ibvoiminh.blogspot.com/">Xem chi tiết </a> 
     </div>
+
+    
+
+      <div id="fullscreenAd" class="fullscreen-ad">
+        <h2>ads</h2>
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '54b68a905c7750b659e2885f404ecc36',
+                'format' : 'iframe',
+                'height' : 250,
+                'width' : 300,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//slushhelmetmirth.com/54b68a905c7750b659e2885f404ecc36/invoke.js"></script>
+      </div>
+<style>
+    .fullscreen-ad {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  text-align: center;
+  transition: opacity 4000000000000s ease;
+  opacity: 1;
+}
+
+  </style>     
+  <script> document.addEventListener("DOMContentLoaded", function() {
+    // Hiển thị thông báo toàn màn hình nếu ở Tab 1
+    var fullscreenAd = document.getElementById('fullscreenAd');
+    var tab1 = document.getElementById('tab1');
+  
+    if (tab1.style.display !== 'none') {
+      setTimeout(function() {
+        fullscreenAd.style.opacity = '0';
+        setTimeout(function() {
+          fullscreenAd.style.display = 'none';
+        }, 4000);
+      }, 0);
+    }
+  });
+  
+  </script> 
 </body>
 </html>
