--- a/sad.html
+++ b/sad.html
@@ -289,7 +289,7 @@
                 <hr>
            
                 <div class="report-section">
-                    <a href="https://ibvoiminh.blogspot.com/">HOME</a> <BR> <BR>
+                    <a href="https://vietnamvds.github.io/">HOME</a> <BR> <BR>
                     <a href="https://ibvoiminh.blogspot.com/"> SEE MORE</a>
                 </div>
     
